--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,6 +21,7 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -31,6 +32,9 @@
               </td>
               <td>
                 <%= urls[url] %>
+              </td>
+              <td>
+                <form method="POST" action="/urls/<%= url %>/delete"><button type="submit">Delete</button></form>
               </td>
             </tr>
             <% } %>
