--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -21,6 +21,7 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -32,6 +33,9 @@
               </td>
               <td>
                 <%= urls[url] %>
+              </td>
+              <td>
+                <form method="GET" action="/urls/<%= url %>"><button type="submit">Edit</button></form>
               </td>
               <td>
                 <form method="POST" action="/urls/<%= url %>/delete"><button type="submit">Delete</button></form>
