--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,6 +23,8 @@
             <%= shortURL %>
           </a>
         </p>
+        <form method="POST" action=""><input type="url" name="New URL to Redirect" id=""><input type="submit"
+            value="Update this TinyURL"></form>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
