--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,5 +11,7 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form action="/login" method="post"><input type="text" name="username" id=""><button type="submit">sign in</button>
+    </form>
   </nav>
 </header>
