add placeholder to regis. form

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,9 +19,9 @@
     <main style="margin: 1em;">
       <h3>Create a TinyURL account</h3>
       <form class="form-inline" action="/register" method="POST">
-        <input type="email" name="email">
-        <input type="password" name="password">
-        <button type="submit"></button>
+        <input type="email" name="email" placeholder="email">
+        <input type="password" name="password" placeholder="password">
+        <button type="submit">Register</button>
       </form>
     </main>
     <!-- Bootstrap JS -->
