header display user email instead of username

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,8 +11,8 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (username) { %>
-      <form action="/logout" method="POST"><b>Logged In As: <%= username %> </b><button type="submit">Logout</button>
+    <% if (user) { %>
+      <form action="/logout" method="POST"><b>Logged In As: <%= user.email %> </b><button type="submit">Logout</button>
       </form>
       <% } else { %>
         <form action="/login" method="POST"><input type="text" name="username" id=""><button
