--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,8 +19,8 @@
     <main style="margin: 1em;">
       <h3>Create a TinyURL account</h3>
       <form class="form-inline" action="/register" method="POST">
-        <input type="email" name="email" placeholder="email">
-        <input type="password" name="password" placeholder="password">
+        <input type="email" name="email" placeholder="email" required>
+        <input type="password" name="password" placeholder="password" required>
         <button type="submit">Register</button>
       </form>
     </main>
