refer to the new db

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,8 +34,8 @@
 
               </td>
               <td>
-                <a href="<%= urls[url] %>">
-                  <%= urls[url] %>
+                <a href="<%= urls[url].longURL %>">
+                  <%= urls[url].longURL %>
                 </a>
 
               </td>
